@@ -123,7 +123,7 @@ sub _process {
 
 			$self->{'tags'}->put(
 				['b', 'a'],
-				['a', 'href', $self->{'url_page_cb'}->(1)],
+				['a', 'href', $self->{'url_page_cb'}->(1, $pages_hr)],
 				['d', 1],
 				['e', 'a'],
 
@@ -157,7 +157,7 @@ sub _process {
 			} else {
 				$self->{'tags'}->put(
 					['b', 'a'],
-					['a', 'href', $self->{'url_page_cb'}->($button_num)],
+					['a', 'href', $self->{'url_page_cb'}->($button_num, $pages_hr)],
 					['d', $button_num],
 					['e', 'a'],
 				);
@@ -172,7 +172,7 @@ sub _process {
 				['e', 'span'],
 
 				['b', 'a'],
-				['a', 'href', $self->{'url_page_cb'}->($pages_hr->{'pages_num'})],
+				['a', 'href', $self->{'url_page_cb'}->($pages_hr->{'pages_num'}, $pages_hr)],
 				['d', $pages_hr->{'pages_num'}],
 				['e', 'a'],
 			);
@@ -202,7 +202,7 @@ sub _process {
 			$prev ? (
 				['b', 'a'],
 				['a', 'class', $self->_css_class('prev')],
-				['a', 'href', $self->{'url_page_cb'}->($prev)],
+				['a', 'href', $self->{'url_page_cb'}->($prev, $pages_hr)],
 				['d', decode_utf8('←')],
 				['e', 'a'],
 			) : (
@@ -216,7 +216,7 @@ sub _process {
 			$next ? (
 				['b', 'a'],
 				['a', 'class', $self->_css_class('next')],
-				['a', 'href', $self->{'url_page_cb'}->($next)],
+				['a', 'href', $self->{'url_page_cb'}->($next, $pages_hr)],
 				['d', decode_utf8('→')],
 				['e', 'a'],
 			) : (
@@ -377,7 +377,19 @@ Default value is 1.
 
 Callback for creating of url for view page.
 
-Input argument is page variable with number of page.
+Input arguments are:
+
+=over
+
+=item * C<$page_number>
+
+Page variable with number of page.
+
+=item * C<$pages_hr>
+
+Reference to array which is going to L</process>.
+
+=back
 
 It's required parameter.
 
