@@ -1,4 +1,5 @@
 0.05
+ - Add $pages_hr variable to arguments in 'url_page_cb' callback.
  - Fix name of variable in doc.
  - Update copyright years.
  - Update Module::Install to 1.21 version.
